--- a/src/app/chessboard/chessboard.component.css
+++ b/src/app/chessboard/chessboard.component.css
@@ -1,32 +1,32 @@
-.row{
+.row {
   display: grid;
   grid-template-columns: repeat(8, 1fr);
   place-content: center;
 }
 
-.spot{
+.spot {
   display: flex;
   position: relative;
   align-items: center;
   justify-content: center;
   width: 100px;
   height: 100px;
-  background-color: #d18b47;
+  background-color: #b58863;
 }
 
-.spot img{
+.spot img {
   z-index: 10;
 }
 
-.light{
-  background-color: #ffce9e;
+.light {
+  background-color: #f0d9b5;
 }
 
-.selected{
+.selected {
   background-color: #819669;
 }
 
-.suggestion{
+.suggestion {
   position: absolute;
   background-color: #819669;
   width: 30%;
@@ -34,18 +34,63 @@
   border-radius: 100%;
 }
 
-.canBeCaptured{
-  background-color: rgb(239, 117, 117);
+.canBeCaptured {
+  border-radius: 100%;
 }
 
-.spot:hover .suggestion{
+
+.previousMoveFrom {
+  background-color: #ced26b;
+}
+
+.previousMoveTo {
+  background-color: #aba23a;
+}
+
+.piece {
+  width: 90%;
+  height: 90%;
+}
+
+.canBeCapturedOuter {
+  overflow: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: #819669;
+}
+
+.canBeCapturedLightInner {
+  position: absolute;
+  width: 110%;
+  height: 110%;
+  border-radius: 100%;
+  background-color: #f0d9b5;
+}
+
+.canBeCapturedDarkInner {
+  position: absolute;
+  width: 110%;
+  height: 110%;
+  border-radius: 100%;
+  background-color: #b58863;
+}
+
+.spot:hover .suggestion {
   background-color: #85784e;
   width: 100%;
   height: 100%;
   border-radius: 0%;
 }
 
-.piece{
-  width: 90%;
-  height: 90%;
+.spot:hover .canBeCapturedLightInner {
+  background-color: #85784e;
+  border-radius: 0%;
+}
+.spot:hover .canBeCapturedDarkInner {
+  background-color: #85784e;
+  border-radius: 0%;
 }
