--- a/src/app/chessboard/chessboard.component.css
+++ b/src/app/chessboard/chessboard.component.css
@@ -1,3 +1,9 @@
+.wrapper{
+  display: grid;
+  grid-template-columns: 3fr 1fr;
+  place-content: center;
+}
+
 .row {
   display: grid;
   grid-template-columns: repeat(8, 1fr);
@@ -28,7 +34,7 @@
 
 .suggestion {
   position: absolute;
-  background-color: #819669;
+  background-color: rgba(20, 85, 30, 0.5);
   width: 30%;
   height: 30%;
   border-radius: 100%;
@@ -93,4 +99,25 @@
 .spot:hover .canBeCapturedDarkInner {
   background-color: #85784e;
   border-radius: 0%;
+}
+
+.buttons{
+  display: flex;
+  gap: 3rem;
+  flex-direction: column;
+  margin: 0px 20px;
+}
+
+.buttons button{
+  height: 50px;
+}
+
+.buttons input{
+  height: 1.5rem;
+  margin-bottom: 1rem;
+}
+
+.buttons div{
+  display: flex;
+  flex-direction: column;
 }
